Non stable version. Starting new branch for new idea.