@@ -2,9 +2,9 @@ package com.kyas.wolkandhold.data.api.response;
 
 import com.kyas.wolkandhold.data.database.entities.Polygon;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Locale;
 import java.util.stream.Collectors;
 
 public class PolygonResponse {
@@ -14,23 +14,35 @@ public class PolygonResponse {
     private long lastUpdated;
     private String wkt;
 
-    public Polygon toEntity() {
-        String coordsPart = wkt.substring(10, wkt.length()-3);
-         List<String> stringList = Arrays.stream(coordsPart.split(","))
-                .map((it) -> it.trim().split(" "))
-                .map((loc) ->
-                        String.format(Locale.getDefault(), "{ \"latitude\": %s, \"longitude\": %s } ", loc[1], loc[0])).collect(Collectors.toList());
+    public List<Polygon> toEntities() {
+        String coordsPart = wkt.substring(13, wkt.length()-1);
+        List<String> listJsons = Arrays.stream(coordsPart.split("\\)\\),"))
+                .map((it) -> {
+                    String s = it.replaceAll("\\(\\(", "");
+                    s = s.replaceAll("\\)\\)", "");
+                    return s;})
+                .map((it) -> it.trim().split(","))
+                .map((pol) -> {
+                    List<String> stringList = Arrays.stream(pol).
+                            map((it) -> it.trim().split(" ")).
+                            map((loc) -> String.format("{ \"latitude\": %s, \"longitude\": %s } ", loc[1], loc[0]))
+                            .toList();
+                    return "[\n    "
+                            + String.join(",\n    ", stringList)
+                            + "\n]";})
+                .collect(Collectors.toList());
 
-        String json = "[\n    "
-                + String.join(",\n    ", stringList)
-                + "\n]";
-        Polygon result = new Polygon();
-        result.id = this.id;
-        result.userId = this.owner.getUserId();
-        result.ownerName = this.owner.getUsername();
-        result.area = this.square;
-        result.lastUpdated = this.lastUpdated;
-        result.pointsJson = json;
+        List<Polygon> result = new ArrayList<>();
+        listJsons.forEach((points) -> {
+            Polygon poly = new Polygon();
+            poly.id = this.id;
+            poly.userId = this.owner.getUserId();
+            poly.ownerName = this.owner.getUsername();
+            poly.area = this.square;
+            poly.lastUpdated = this.lastUpdated;
+            poly.pointsJson = points;
+            result.add(poly);
+        });
         return result;
     }
 
